# pollflow

./: .gitignore  Makefile  README.md  docker-compose.yml  future_improvements.md
.ci/: rds-config.env
.github/workflows/: build-and-deploy.yml  ci-workflows.diagrams.md  terraform.yml  test.yml
infra/: infrastructure.diagrams.md
infra/scripts/: check-eks-status.sh
infra/terraform/: _generated.providers.tf  main.tf  outputs.tf
infra/tf-bootstrap/: .terraform.lock.hcl  README.md  generated-files.tf  github-oidc.tf  iam.tf  main.tf  outputs.tf  providers.tf  state-backend.tf  variables.tf
infra/tf-main/: .gitignore  README-SETUP.md  README.md  _generated.backend.tf  _generated.providers.tf  generated-files.tf  main.tf  outputs.tf  providers.tf  vars.tf
k8s/: README.md  k8s.diagrams.md
k8s/ingress/: frontend-ingress.yaml
scripts/: README.md  migrate-rds-schema.sh  pre-commit.sh  prod-test-votes.sh  test-votes.sh
services/: README.md  services.diagrams.md
services/poll-generator/: .env.example  .gitignore  Makefile  build.sh  db.py  lambda-flow.diagrams.md  lambda_function.py  llm_client.py  news_fetcher.py  poll_scheduler.py  pyproject.toml  quality_gates.py
services/poll-generator/prompts/: moderation.txt  moderation_user.txt  poll_generation.txt  poll_generation_user.txt
services/poll-generator/scripts/: tunnel-start.sh  tunnel-stop.sh
services/poll-generator/tests/: __init__.py  e2e.py  test_db.py  test_llm_client.py  test_llm_real.py  test_news_fetcher.py  test_news_real.py  test_poll_scheduler.py  test_quality_gates.py
services/vote/: app.py
(+118 files in other folders)
